<resources>
    <string name="app_name">Space Delivery</string>
    <string name="start">START</string>
    <string name="shuttle_name">Shuttle Name</string>
    <string name="feature">Feature</string>
    <string name="durability">Durability</string>
    <string name="velocity">Velocity</string>
    <string name="capacity">Capacity</string>
    <string name="available_points">Available Points:</string>
    <string name="shuttle_name_cannot_be_empty">Shuttle name cannot be empty.</string>
    <string name="stations">Stations</string>
    <string name="favorites">Favorites</string>
    <string name="do_you_want_to_start_over">Do you want to start over?</string>
    <string name="yes">yes</string>
    <string name="no">No</string>
    <string name="search_planet">Search Planet</string>
    <string name="there_is_no_planet_to_travel">There is no planet to travel</string>
    <string name="travel">Travel</string>
    <string name="completed">Completed</string>
    <string name="galaxy_far_far_away">A galaxy far far away...</string>
    <string name="station_cannot_be_found">Station cannot be found</string>
    <string name="all_the_stations_are_far_away">All the stations are far away</string>
    <string name="you_traveled_all_the_stations">You traveled all the stations!</string>
    <string name="you_are_out_of_ugs" type="id">You are out of space clothes</string>
    <string name="your_time_eus_is_up" type="id">Your time (EUS) is up!</string>
    <string name="your_spaceship_has_taken_too_much_damage" type="id">Your spaceship has taken too
        much damage
    </string>
    <string name="you_dont_have_favorite_station">You don\'t have favorite station</string>
    <string name="traveled_stations">Traveled Stations</string>
    <string name="total_travel_time_in_eus">Total Travel Time (EUS)</string>
    <string name="delivered_ugs">Delivered UGS</string>
    <string name="game_over_shuttle_name">Game Over, %1$s!</string>
    <string name="statistics">Statistics</string>
    <string name="start_over">Start Over</string>
    <string name="you_dont_have_any_statistics">You don\'t have any statistics</string>
</resources>